# cpp-sfml-chess

./: CMakeLists.txt  readme.md
header/: board.h  game.h  piece.h  pieces.h
src/: board.cpp  game.cpp  main.cpp  pieces.cpp
